--- a/ui/app/styles/bahmni-helper/_variables.scss
+++ b/ui/app/styles/bahmni-helper/_variables.scss
@@ -243,7 +243,7 @@ $bodyBackground: #EEE;
 
 $white: #FFFFFF;
 $black: #000000;
-$darkerGrey: #BBB;
+$darkerGrey: #bbb;
 $lighterGrey: #f3f3f3;
 
 //openMrs colors
