updated more colors

--- a/ui/app/styles/bahmni-helper/_variables.scss
+++ b/ui/app/styles/bahmni-helper/_variables.scss
@@ -11,37 +11,37 @@ Color patterns used in the whole Bahmni application are listed below... For usin
     <div class="row">
 
     <div class="col-sm-3 col-xs-6">
-      <div style="background:#00463f;"><br><br><br><br><br></div>
+      <div style="background:#333399;"><br><br><br><br><br></div>
       <pre class="text-center">$bahmniPrimaryColor</pre>
     </div>
 
     <div class="col-sm-3 col-xs-6">
-      <div style="background:#669999;"><br><br><br><br><br></div>
+      <div style="background:#666699;"><br><br><br><br><br></div>
       <pre class="text-center">$bahmniSecondaryColor</pre>
     </div>
 
     <div class="col-sm-3 col-xs-6">
-      <div style="background: #457FAC;"><br><br><br><br><br></div>
+      <div style="background: #33ccff;"><br><br><br><br><br></div>
       <pre class="text-center">$bahmniTertiaryColor</pre>
     </div>
 
     <div class="col-sm-3 col-xs-6">
-      <div style="background:#2b95ff;"><br><br><br><br><br></div>
+      <div style="background:#0066ff;"><br><br><br><br><br></div>
       <pre class="text-center">$bahmniLinkColor</pre>
     </div>
 
     <div class="col-sm-3 col-xs-6">
-      <div style="background:#a1d030;"><br><br><br><br><br></div>
+      <div style="background:#33ccff;"><br><br><br><br><br></div>
       <pre class="text-center">$bahmniPrimaryBtnColor</pre>
     </div>
 
     <div class="col-sm-3 col-xs-6">
-      <div style="background:#88af28;"><br><br><br><br><br></div>
+      <div style="background:#33ccff;"><br><br><br><br><br></div>
       <pre class="text-center">$bahmniPrimaryBtnColorHover</pre>
     </div>
 
     <div class="col-sm-3 col-xs-6">
-      <div style="background:#66b298;"><br><br><br><br><br></div>
+      <div style="background:#666699;"><br><br><br><br><br></div>
       <pre class="text-center">$bahmniSectionHeaderColor</pre>
     </div>
 
@@ -76,12 +76,12 @@ Color patterns used in the whole Bahmni application are listed below... For usin
     </div>
 
     <div class="col-sm-3 col-xs-6">
-      <div style="background: #007fff;"><br><br><br><br><br></div>
+      <div style="background: #33ccff;"><br><br><br><br><br></div>
       <pre class="text-center">$clinicalFormFocus</pre>
     </div>
 
     <div class="col-sm-3 col-xs-6">
-      <div style="background: #fffdf7;"><br><br><br><br><br></div>
+      <div style="background: #33ccff;"><br><br><br><br><br></div>
       <pre class="text-center">$clinicalFormFocusBg</pre>
     </div>
 
@@ -189,16 +189,16 @@ Below listed fonts are used in the whole Bahmni application.
 $max-page-width: 1300px;
 
 /*  _colors - bahmniTheme:  */
-$bahmniPrimaryColor: #00463f;
-$bahmniSecondaryColor: #669999;
+$bahmniPrimaryColor: #333399;
+$bahmniSecondaryColor: #666699;
 $bahmniTertiaryColor: #457FAC;
 
-$bahmniLinkColor: #2b95ff;
+$bahmniLinkColor: #33ccff;
 
-$bahmniPrimaryBtnColor: #a1d030;
-$bahmniPrimaryBtnColorHover: #88af28;
+$bahmniPrimaryBtnColor: #666699;
+$bahmniPrimaryBtnColorHover: #0066ff;
 
-$bahmniSectionHeaderColor: #66b298;
+$bahmniSectionHeaderColor: #666699;
 
 
 /*  _components - bahmniTheme: */
