--- a/ui/app/styles/registration/_patientPhoto.scss
+++ b/ui/app/styles/registration/_patientPhoto.scss
@@ -141,20 +141,20 @@ video{
 }
 
 .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight{
-  border: 1px solid #36CC4E;
-  background: #D6FACF;
+  border: 1px solid #0066ff;
+  background: #33ccff;
 }
 
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus{
-  border: 1px solid #36CC4E;
-  background: #D6FACF;
+  border: 1px solid #0066ff;
+  background: #33ccff;
   font-weight: bold;
-  color: #048B24;
+  color: #0066ff;
 }
 
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active{
-  border: 1px solid #107C22;
+  border: 1px solid #666699;
   background: #FFF9D8;
-  color: #1EB642;
+  color: #0066ff;
 }
 /**** overriding jquery styling end *****/
