--- a/ui/app/styles/bahmni-helper/_variables.scss
+++ b/ui/app/styles/bahmni-helper/_variables.scss
@@ -195,7 +195,7 @@ $bahmniTertiaryColor: #457FAC;
 
 $bahmniLinkColor: #33ccff;
 
-$bahmniPrimaryBtnColor: #666699;
+$bahmniPrimaryBtnColor: #33ccff;
 $bahmniPrimaryBtnColorHover: #0066ff;
 
 $bahmniSectionHeaderColor: #666699;
@@ -255,7 +255,7 @@ $subtlerText: $darkerGrey;
 $link: #007FFF;
 $focus: #FFFDF7;
 
-$success: #A1D030;
+$success: #9999ff;
 $alert: #FFA000;
 $error: #ff6666;
 $successBackground: #ddffdd;
