--- a/ui/app/styles/bahmni-components/_buttons.scss
+++ b/ui/app/styles/bahmni-components/_buttons.scss
@@ -135,7 +135,7 @@ category: Layout - Button
 
 
 
-@mixin button($tcolor: #FFF, $bcolor: #DDD, $font: $text) {
+@mixin button($tcolor: #FFF, $bcolor: #cccccc, $font: $text) {
   border-radius: 3px;
   background: linear-gradient(to bottom, $tcolor, $bcolor);
   background-color: $bcolor;
@@ -672,9 +672,9 @@ button.toggle{
   }
 }
 button.btn--add{
-  background: linear-gradient(to bottom, #A1D030, #88af28);
-  background-color: #88af28;
-  border: #88af28 1px solid;
+  background: linear-gradient(to bottom, #33ccff, #fff);
+  background-color: #33ccff,;
+  border: #33ccff, 1px solid;
   color: $white;
   font-size: 13px !important;
   padding: 7px !important;
